# ostep_homework

./: 1_fork_with_flags.cpp  3_fork_with_barrier.cpp  CMakeLists.txt  main.cpp
process_api_hw/: 2_fork_opened_file.cpp  4_fork_with_exec_ls.cpp  CMakeLists.txt
